Add cleanAssembly, processDefines, and processLabels in Assembler